/*
 * This file is part of trust|me
 * Copyright(c) 2013 - 2021 Fraunhofer AISEC
 * Fraunhofer-Gesellschaft zur FÃ¶rderung der angewandten Forschung e.V.
 *
 * This program is free software; you can redistribute it and/or modify it
 * under the terms and conditions of the GNU General Public License,
 * version 2 (GPL 2), as published by the Free Software Foundation.
 *
 * This program is distributed in the hope it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GPL 2 license for more details.
 *
 * You should have received a copy of the GNU General Public License along with
 * this program; if not, see <http://www.gnu.org/licenses/>
 *
 * The full GNU General Public License is included in this distribution in
 * the file called "COPYING".
 *
 * Contact Information:
 * Fraunhofer AISEC <trustme@aisec.fraunhofer.de>
 */

syntax = "proto2";

option java_package = "de.fraunhofer.aisec.trustme.service";

import "container.proto";
import "common/audit.proto";

message CmldToServiceMessage {
	reserved 6 to 12, 15; // legacy or only available in non-CC Mode
	enum Code {
		reserved 2 to 6, 15, 16; // legacy or only available in non-CC Mode

		SHUTDOWN = 1;

		CONTAINER_CFG_NAME = 17;
		CONTAINER_CFG_DNS = 18;

		AUDIT_NOTIFY = 19;
		AUDIT_RECORD = 20;
		AUDIT_COMPLETE = 21;
	}
	required Code code = 1;

	optional string container_cfg_name = 13;
	optional string container_cfg_dns = 14;
	optional AuditRecord audit_record = 16;
	optional uint64 audit_remaining_storage = 17;
}

message ServiceToCmldMessage {
	reserved 6 to 14; // legacy or only available in non-CC Mode
	enum Code {
		reserved 2 to 17; // legacy or only available in non-CC Mode
		BOOT_COMPLETED = 1;

		CONTAINER_CFG_NAME_REQ = 18;
		CONTAINER_CFG_DNS_REQ = 19;

		EXEC_CAP_SYSTIME_PRIV = 20;

		AUDIT_ACK = 21;
	}
	required Code code = 1;

	optional string captime_exec_path = 15;
	repeated string captime_exec_param = 16;
	optional string audit_ack = 17;
}
